[project]
name = "pyLDB"
version = "0.0.1"
description = "A Pythonic interface for LDB (GUS Local Data Bank) datasets."
readme = "README.md"
authors = [{name = "Mikołaj Kaczmarek", email = "12432719+AN0DA@users.noreply.github.com"}]
license = {text = "MIT"}

requires-python = ">=3.11"
dependencies = [
    "dataclasses>=0.8",
    "httpx>=0.28.1",
    "matplotlib>=3.10.3",
    "numpy>=2.3.0",
    "pandas>=2.3.0",
    "requests>=2.32.4",
    "requests-cache>=1.2.1",
    "seaborn>=0.13.2",
    "tqdm>=4.66.0",
]

[dependency-groups]
dev = [
    "bandit>=1.8.3",
    "mypy>=1.15.0",
    "notebook>=7.4.3",
    "pytest-asyncio>=1.0.0",
    "pytest-cov>=6.0.0",
    "pytest-mock>=3.14.0",
    "pytest-xdist>=3.8.0",
    "pytest>=8.3.5",
    "responses>=0.25.7",
    "ruff>=0.9.10",
    "types-requests>=2.32.0.20250306",
]
docs = [
    "sphinx>=8.2.3",
    "sphinx-autodoc-typehints>=3.2.0",
    "sphinx-rtd-theme>=3.0.2",
    "myst-nb>=1.1.0",
]

[tool.ruff]
line-length = 120
output-format = "full"

exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".git-rewrite",
    ".hg",
    ".ipynb_checkpoints",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".pyenv",
    ".pytest_cache",
    ".pytype",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    ".vscode",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "site-packages",
    "venv",
]
target-version = "py311"

[tool.ruff.lint]
select = [
    "A",
    "B",
    "C4",
    "E",
    "F",
    "I001",
    "SIM",
    "T201",
    "UP",
]
ignore = ["E501", "B008"]
unfixable = ["B"]

[tool.ruff.lint.flake8-builtins]
ignorelist = ["format"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "auto"
skip-magic-trailing-comma = false


[tool.pytest]
# Async support
asyncio_mode = "auto"

# Parallel testing configuration
addopts = [
    "--strict-config",
    "-n=auto",  # Enable parallel testing with auto worker count
    "--dist=worksteal",  # Use worksteal distribution for better load balancing
]

# xdist configuration for parallel testing
# These settings ensure proper isolation when running tests in parallel
xfail_strict = true

# Disable warnings about test collection to reduce noise in parallel runs
filterwarnings = [
    "ignore::DeprecationWarning",
    "ignore::PendingDeprecationWarning",
]

# Test discovery
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
norecursedirs = [".git", ".env", "venv"]

# Test markers
markers = [
    "unit: Unit tests that test isolated components with mocked dependencies",
    "integration: Integration tests that test component interactions",
    "e2e: End-to-end tests that test full workflows (may require API key)",
]


[tool.mypy]
python_version = "3.11"
show_error_codes = true
strict = true
disallow_untyped_calls = false
disallow_any_generics = false
warn_return_any = false
ignore_missing_imports = true
disable_error_code = "abstract"



[tool.bandit]
exclude_dirs = ['tests/*']

[tool.coverage.paths]
source = ["pyldb/"]

[tool.coverage.run]
source = ["pyldb/"]
omit = [
    "**/__init__.py",
]
relative_files = true

[tool.coverage.report]
show_missing = true


[tool.semantic_release]
version_toml = ["pyproject.toml:project.version"]
tag_format = "v{version}"

commit_parser = "angular"

[tool.semantic_release.commit_parser_options]
allowed_tags = [
    "feat",      # New feature
    "fix",       # Bug fix
    "perf",      # Performance improvement
    "refactor",  # Code refactoring (no feature change)
    "docs",      # Documentation changes
    "style",     # Code style changes (formatting, etc.)
    "test",      # Adding/updating tests
    "build",     # Build system changes
    "ci",        # CI configuration changes
    "chore",     # Maintenance tasks
]

minor_tags = ["feat"]
patch_tags = ["fix", "perf"]

[tool.semantic_release.branches.main]
match = "main"
prerelease = false

[tool.semantic_release.changelog]
changelog_file = "CHANGELOG.md"

exclude_commit_patterns = [
    "^chore:",           # Exclude chore commits
    "^ci:",              # Exclude CI commits
    "^docs:",            # Exclude documentation commits
    "^style:",           # Exclude style commits
    "^refactor:",        # Exclude refactor commits
    "^test:",            # Exclude test commits
    "Merge pull request", # Exclude merge commits
    "Merge branch",
]

[tool.semantic_release.remote]
name = "origin"
type = "github"
ignore_token_for_push = false

[tool.semantic_release.publish]
upload_to_vcs_release = true

build_command = "uv build"

major_on_zero = false

commit_version_number = true
commit_message = "chore(release): {version}\n\nAutomatically generated by python-semantic-release"
tag_commit = true

assets = ["CHANGELOG.md", "pyproject.toml"]


[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
